syntax = "proto3";

option java_package = "com.ulknow.grpc.examples";
option java_outer_classname="GrpcEntity";

package helloworld;

// The greeter service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
  //请求流
  rpc SayHelloReqStream (stream HelloRequest) returns (HelloReply) {}
  //响应流
  rpc SayHelloRepStream (HelloRequest) returns (stream HelloReply) {}
  //双向流接口
  rpc SayHelloReqRepStream (stream HelloRequest) returns (stream HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}